cleaner code